Mon Jan  7 15:04:18 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdssrv.h src/server/login.c src/server/server.c:
	* src/server/unittest.c:
	- small improves
	* src/pool/user.c: style update

Sun Jan  6 11:48:17 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: even SQLExecDirect support parameters!
	* src/odbc/unittests/genparams.c: improve

Sat Jan  5 12:23:21 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c:
	- add parameterized flag calling sp_cursoropen if needed

Wed Jan  2 00:08:45 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/apps/Makefile.am:
	- remove GNU style
	* src/dblib/dblib.c: make it compile
